--- a/event/templates/home.html
+++ b/event/templates/home.html
@@ -1,70 +1,51 @@
-{% extends "layout.html" %}
-{% block content %}
+{% extends "layout.html" %} {% block content %}
 
-    <!-- Cards, looped using for -->
-    <section>
-      <h3 class="text-center">Discover New Events Nearby.</h3>
-        <div class="container mt-5">
-        <div class="row">
-          
-          {% for event in event_value.items %}
-            {% if event.is_verified == True %}
-            <!-- <div class="col-md-3 mb-5">
-                <div class="card" style="width: 18rem;">
-                    <img src="{{url_for('static', filename='banner_pics/' + event.banner)}}" class="card-img-top" alt="">
-                    <div class="card-body">
-                      <h5 class="card-title">{{ event.name }} ,<small class="text-muted"> {{ event.posted.strftime("%b %d") }} </small></h5>
-                      <p class="card-text mb-2">{{ event.description }}</p>
-                      <div class="mb-2"><a class="text-decoration-none " href="{{ url_for('user_events', username=event.author.username) }}">{{ event.author.username }}</a></div>
-                      
-                      <a href="{{ url_for('event', event_id=event.id) }}" class="btn btn-primary">Event Details</a>
-                      
-                    </div>
-                  </div>
+<!-- Cards, looped using for -->
+<section>
+  <h3 class="text-center">Discover New Events Nearby.</h3>
+  <div class="container mt-5">
+    <div class="row">
+      {% for event in event_value.items %} {% if event.is_verified == True %}
+      <div class="col-md-3 mb-5">
+        <a href="{{ url_for('event', event_id=event.id) }}" class="card">
+          <img
+            src="{{url_for('static', filename='banner_pics/' + event.banner)}}"
+            class="card__image"
+            alt=""
+          />
+          <div class="card__overlay">
+            <div class="card__header">
+              <div class="card__header-text">
+                <h2 class="card__title">{{ event.name }}</h2>
+                <span class="card__status"
+                  >{{ event.posted.strftime("%b %d") }}
+                </span>
+              </div>
             </div>
-             -->
+            <p class="card__des">{{ event.description | truncate(70) }}...</p>
+            <p class="card__description" style="font-size: 0.8em">
+              - {{ event.author.username }}
+            </p>
+          </div>
+        </a>
+      </div>
+      {% endif %} {% endfor %}
+    </div>
+  </div>
+</section>
 
-             <div class="col-md-3 mb-5">
-              <a href="{{ url_for('event', event_id=event.id) }}" class="card">
-                <img src="{{url_for('static', filename='banner_pics/' + event.banner)}}" class="card__image" alt="">
-                <div class="card__overlay">
-                  <div class="card__header">
-                    <!-- <svg class="card__arc" xmlns="http://www.w3.org/2000/svg">
-                    <path />
-                  </svg> -->
-                  <div class="card__header-text">
-                    <h2 class="card__title">{{ event.name }}</h2>
-                    <span class="card__status">{{ event.posted.strftime("%b %d") }}</span>
-                  </div>
-                  </div>
-                  <p class="card__description">{{ event.description | truncate(80) }}...</p>
-                </div>
-  
-              </a>
-            </div>             
-            {% endif %}
-          {% endfor %}
-           
-
-        </div>
-        </div>
-
-
-
-    </section>
-
-    {% for page_num in event_value.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
-      {% if page_num %}
-        {% if event_value.page == page_num %}
-          <a class="btn btn-dark mb-4" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
-        {% else %}
-          <a class="btn btn-dark mb-4" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
-        {% endif %}
-      {% else %}
-        ...
-      {% endif %}
-    {% endfor %}
-    
-{% endblock content %}
-
-
+{% for page_num in event_value.iter_pages(left_edge=1, right_edge=1,
+left_current=1, right_current=2) %} {% if page_num %} {% if event_value.page ==
+page_num %}
+<a
+  class="btn btn-dark mb-4 shadow-none"
+  href="{{ url_for('home', page=page_num) }}"
+  >{{ page_num }}</a
+>
+{% else %}
+<a
+  class="btn btn-dark mb-4 shadow-none"
+  href="{{ url_for('home', page=page_num) }}"
+  >{{ page_num }}</a
+>
+{% endif %} {% else %} ... {% endif %} {% endfor %} {% endblock content %}
