--- a/event/templates/layout.html
+++ b/event/templates/layout.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <!-- Bootstrap + CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
 
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static', filename='styles.css') }}"
+    />
 
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -18,165 +30,229 @@
     />
 
     <!-- Vectors -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+      integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
+      crossorigin="anonymous"
+    />
 
-     <!-- Title -->
-
+    <!-- Title -->
     {% if title %}
-        <title>EventHub - {{ title }}</title>
+    <title>EventHub - {{ title }}</title>
     {% else %}
-        <title>EventHub</title>
+    <title>EventHub</title>
     {% endif %}
-</head>
-<body>
+  </head>
+  <body>
+    <!-- preloader -->
+    <div class="loader-wrapper">
+      <div class="loader" id="loader-2">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
 
-
-     <!-- Navbar -->
+    <!-- Navbar -->
 
     <header class="site-header">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-            <div id="navi" class="container-fluid">
-              <a class="navbar-brand" href="{{ url_for('home') }}">EventHub</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              
-              <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{ url_for('home') }}">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('about') }}">About</a>
-                  </li>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div id="navi" class="container-fluid">
+          <a class="navbar-brand" href="{{ url_for('home') }}">EventHub</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarTogglerDemo03"
+            aria-controls="navbarTogglerDemo03"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-                </ul>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="{{ url_for('home') }}"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('about') }}">About</a>
+              </li>
+            </ul>
+          
 
-                 <!-- Navbar Right Side -->
-                <div class="navbar-nav">
-
-                  {% if current_user.is_authenticated %}
-                  <div class="dropdown">
-                    <a class="nav-link" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="fas fa-user-circle fa-2x usercircle"></i></a>
-
-                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuLink">
-                      {% if current_user.is_admin %}
-                      <li><a class="dropdown-item" href="{{ url_for('approve_admin') }}">Approve Event</a></li>
-                      {% endif %}
-                      <li><a class="dropdown-item" href="{{ url_for('new_event') }}">Add an Event</a></li>
-                      <li><a class="dropdown-item" href="{{ url_for('reg_event') }}">Registered Event</a></li>
-                      <li><a class="dropdown-item" href="{{ url_for('user_event') }}">My Event</a></li>
-                      <li><a class="dropdown-item" href="{{ url_for('account') }}">Account</a></li>
-                      <li><a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a></li>
-                    </ul>
-                  </div>
-                  
-                  {% else %}
-                  <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
-                  <a class="btn btn-dark ms-2 grow " href="{{ url_for('register') }}">&nbsp;Register&nbsp;</a>                  
-                  {% endif %}
-                </div>
-                </div>
-              </div>
+          <!-- Navbar Right Side -->
+          <div class="navbar-nav">
+            {% if current_user.is_authenticated %}
+            <div class="dropdown">
+              <a
+                class="nav-link"
+                href="#"
+                role="button"
+                id="dropdownMenuLink"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                <i class="fas fa-user-circle fa-2x usercircle"></i
+              ></a>
+                
+              <ul
+                class="dropdown-menu dropdown-menu-end"
+                aria-labelledby="dropdownMenuLink"
+              >
+                {% if current_user.is_admin %}
+                <li>
+                  <a class="dropdown-item" href="{{ url_for('approve_admin') }}"
+                    >Approve Event</a
+                  >
+                </li>
+                {% endif %}
+                <li>
+                  <a class="dropdown-item" href="{{ url_for('new_event') }}"
+                    >Add an Event</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="{{ url_for('reg_event') }}"
+                    >Registered Event</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="{{ url_for('user_event') }}"
+                    >My Event</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="{{ url_for('account') }}"
+                    >Account</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="{{ url_for('logout') }}"
+                    >Logout</a
+                  >
+                </li>
+              </ul>
             </div>
-          </nav>
+
+            {% else %}
+            <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+            <a
+              class="btn btn-dark ms-2 grow shadow-none"
+              href="{{ url_for('register') }}"
+              >&nbsp;Register&nbsp;</a
+            >
+            {% endif %}
+          </div>
+        </div>
+        </div>
+      </nav>
     </header>
 
+    <!-- Content-->
 
-
-   
-    <!-- Content and Sidebar -->
-
-
-    
     <main role="main" class="container-fluid">
-     <!-- <div class="row">
-        <div class="col-md-8"> -->
-          {% with messages = get_flashed_messages(with_categories= true) %}
-             {% if messages %}
-               {% for category, message in messages %}
-                <div class="alert alert-{{ category }} mt-2">
-                  {{ message }}
-                </div>
-              {% endfor %}
-             {% endif %}
-          {% endwith %}
-          {% block content %}{% endblock %}
-          
-        </div>
-        </main>
+      {% with messages = get_flashed_messages(with_categories= true) %} {% if
+      messages %} {% for category, message in messages %}
+      <div class="alert alert-{{ category }} mt-2">{{ message }}</div>
+      {% endfor %} {% endif %} {% endwith %} {% block content %}{% endblock %}
+    </main>
 
-        <section id="footer" class="mt-5">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-8"><div id="footer_text">EventHub</div>
-              <br>
-                An Event Portal for college events.<br>
-                Experimental version.
 
-              </div>
-              <div class="col-sm-4">
-                <div id="footer_text_c" class="mb-1">Links</div>                
-                <div>
-                {% if current_user.is_authenticated %}
-                  <ul style="list-style-type: none; margin:0; padding:0;">
-                    {% if current_user.is_admin %}
-                    <li><a id="footer_text_b" href="{{ url_for('approve_admin') }}">Approve Event</a></li>
-                    {% endif %}
-                    <li><a id="footer_text_b" href="{{ url_for('new_event') }}">Add an Event</a></li>
-                    <li><a id="footer_text_b" href="{{ url_for('reg_event') }}">Registered Event</a></li>
-                    <li><a id="footer_text_b" href="{{ url_for('user_event') }}">My Event</a></li>
-                    <li><a id="footer_text_b" href="{{ url_for('account') }}">Account</a></li>
-                    <li><a id="footer_text_b" href="{{ url_for('logout') }}">Logout</a></li>
-                  </ul>
-                </div>
-                
-                {% else %}
-                <ul style="list-style-type: none; margin:0; padding:0;">
-                <li><a id="footer_text_b" href="{{ url_for('login') }}">Login</a></li>
-                <li><a id="footer_text_b" href="{{ url_for('register') }}">Register</a></li>   
-              </ul>          
-                {% endif %}
-              </div>
-              </div>
-            </div>
-            </div>
+
+    <!-- Footer Section-->
+    <section id="footer" class="mt-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-8">
+            <div id="footer_text">EventHub</div>
+            <br />
+            An Event Portal for college events.<br />
+            Experimental version.
           </div>
+          <div class="col-sm-4 mt-3">
+            <div id="footer_text_c" class="mb-1">Links</div>
+            <div>
+              {% if current_user.is_authenticated %}
+              <ul style="list-style-type: none; margin: 0; padding: 0">
+                {% if current_user.is_admin %}
+                <li>
+                  <a id="footer_text_b" href="{{ url_for('approve_admin') }}"
+                    >Approve Event</a
+                  >
+                </li>
 
-        </section>
-
-        <section id="footer_base">
-
-        </section>
-
-
-        <!-- Sidebar
-        <div class="col-md-4 mt-5">
-          <div class="content-section">
-            <h3>Our Sidebar</h3>
-            <p class='text-muted'>You can put any information here you'd like.
-              <ul class="list-group">
-                <li class="list-group-item list-group-item-light">Latest Posts</li>
-                <li class="list-group-item list-group-item-light">Announcements</li>
-                <li class="list-group-item list-group-item-light">Calendars</li>
-                <li class="list-group-item list-group-item-light">etc</li>
+                {% endif %}
+                <li>
+                  <a id="footer_text_b" href="{{ url_for('new_event') }}"
+                    >Add an Event</a
+                  >
+                </li>
+                <li>
+                  <a id="footer_text_b" href="{{ url_for('reg_event') }}"
+                    >Registered Event</a
+                  >
+                </li>
+                <li>
+                  <a id="footer_text_b" href="{{ url_for('user_event') }}"
+                    >My Event</a
+                  >
+                </li>
+                <li>
+                  <a id="footer_text_b" href="{{ url_for('account') }}"
+                    >Account</a
+                  >
+                </li>
+                <li>
+                  <a id="footer_text_b" href="{{ url_for('logout') }}"
+                    >Logout</a
+                  >
+                </li>
               </ul>
-            </p>
+            </div>
+
+            {% else %}
+            <ul style="list-style-type: none; margin: 0; padding: 0">
+              <li>
+                <a id="footer_text_b" href="{{ url_for('login') }}">Login</a>
+              </li>
+              <li>
+                <a id="footer_text_b" href="{{ url_for('register') }}"
+                  >Register</a
+                >
+              </li>
+            </ul>
+            {% endif %}
           </div>
         </div>
       </div>
-    </main>
+    </section>
 
-         -->
-
-
-
+    <!-- Footer Base -->    
+    <section id="footer_base"><div class="base_text">Follow this Project on : 
+      <a href="https://github.com/ujjwalkrishna7/Event_Hub">
+      <i class="fab fa-github fa-2x github_icon ms-2"></i></div></section></a>
 
     <!-- JavaScript  -->
-    
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script>
+      $(window).on("load", function () {
+        $(".loader-wrapper").fadeOut("slow");
+      });
+    </script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
     <script src="{{ url_for('static', filename='js.js') }}"></script>
-</body>
+  </body>
 </html>
