--- a/event/templates/register.html
+++ b/event/templates/register.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-    <div class="content-section mt-5">
+    <div class="content-section_login mt-5">
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
@@ -64,6 +64,7 @@
             </div>
         </form>
     </div>
+    <br>
     <div class="border-top pt-3">
         <small class="text-muted">
             Already Have An Account? <a class="ml-2" href="{{ url_for('login') }}">Sign In</a>
