--- a/event/templates/registered_event.html
+++ b/event/templates/registered_event.html
@@ -1,15 +1,21 @@
 {% extends "layout.html" %}
 {% block content %}
-  <h1>Your Events</h1>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
+<h1 class="text-center border-bottom">Your Events</h1>
+<br>
+<br>
+{% if event_list %}
 {% for i in range(size) %}
    <p><strong><em>{{ event_list[i].name }}</em></strong> on {{ event_list[i].date.strftime("%b %d")}} at {{ event_list[i].time }} pm, <em>Venue:</em> <strong>{{ event_list[i].venue }}</strong></p>
 {% endfor %}
+{% else %}
+<div>You have not registered for any Events.</div>
+{% endif %}
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 {% endblock content %}
