--- a/event/templates/approve_event.html
+++ b/event/templates/approve_event.html
@@ -41,7 +41,7 @@
             >
           </p>
           <form
-            action="{{ url_for('approving_event', event_id=event.id) }}"
+            action="{{ url_for('events.approving_event', event_id=event.id) }}"
             method="POST"
           >
             <input
@@ -89,7 +89,7 @@
           Close
         </button>
         <form
-          action="{{ url_for('delete_event', event_id=event.id) }}"
+          action="{{ url_for('events.delete_event', event_id=event.id) }}"
           method="POST"
         >
           <input type="submit" class="btn btn-danger" value="Delete" />
