--- a/event/templates/user_events.html
+++ b/event/templates/user_events.html
@@ -13,9 +13,9 @@
                     <div class="card-body">
                       <h5 class="card-title">{{ event.name }} <small class="text-muted"> {{ event.posted.strftime('%m-%d') }} </small></h5>
                       <p class="card-text mb-2">{{ event.description }}</p>
-                      <div class="mb-2"><a class="text-decoration-none " href="{{ url_for('user_events', username=event.author.username) }}">{{ event.author.username }}</a></div>
+                      <div class="mb-2"><a class="text-decoration-none " href="{{ url_for('users.user_events', username=event.author.username) }}">{{ event.author.username }}</a></div>
                       
-                      <a href="{{ url_for('event', event_id=event.id) }}" class="btn btn-primary">Take to link</a>
+                      <a href="{{ url_for('events.event', event_id=event.id) }}" class="btn btn-primary">Take to link</a>
                       
                     </div>
                   </div>
@@ -35,9 +35,9 @@
     {% for page_num in events.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
       {% if page_num %}
         {% if events.page == page_num %}
-          <a class="btn btn-dark mb-4" href="{{ url_for('user_events', username =user.username, page=page_num) }}">{{ page_num }}</a>
+          <a class="btn btn-dark mb-4" href="{{ url_for('users.user_events', username =user.username, page=page_num) }}">{{ page_num }}</a>
         {% else %}
-          <a class="btn btn-outline-dark mb-4" href="{{ url_for('user_events', username =user.username, page=page_num) }}">{{ page_num }}</a>
+          <a class="btn btn-outline-dark mb-4" href="{{ url_for('users.user_events', username =user.username, page=page_num) }}">{{ page_num }}</a>
         {% endif %}
       {% else %}
         ...
